--- a/assets/style.css
+++ b/assets/style.css
@@ -651,6 +651,138 @@
         }
     }
 
+/* Tickets page */
+    section.ticket-page {
+        width: 90%;
+        padding: 50px 5%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
+    section.ticket-page article {
+        flex: 0 1 100%;
+        margin-bottom: 40px;
+        padding: 35px;
+        background-color: #e1e1e1;
+        border-radius: 10px;
+    }
+
+    section.ticket-page article h3 {
+        font-size: 30px;
+        margin-bottom: 10px;
+    }
+
+    section.ticket-page section.table-container {
+        flex: 0 1 calc(95% - 350px);
+        margin-right: 5%;
+        position: relative;
+        overflow-x: scroll;
+        border-radius: 10px;
+    }
+
+    section.ticket-page section.table-container table {
+        min-width: 100%;
+        border-collapse: collapse;
+    }
+    
+    section.ticket-page section.table-container table thead,
+    section.ticket-page section.table-container table tfoot {
+        background-color: black;
+    }
+
+    section.ticket-page section.table-container table thead tr th,
+    section.ticket-page section.table-container table tfoot tr td {
+        color: white;
+        padding: 12px 16px;
+        text-align: left;
+        min-width: 130px;
+    }
+
+    section.ticket-page section.table-container table tbody tr td {
+        padding: 12px 16px;
+        border-left: 1px solid black;
+        min-width: 120px;
+    }
+
+    section.ticket-page section.table-container table tbody tr td:first-child {
+        border-left: none;
+    }
+
+    section.ticket-page section.table-container table tbody tr:last-child td {
+        border-bottom: 1px solid black;
+    }
+
+    section.ticket-page section.table-container table tbody tr:nth-child(even) {
+        background-color: #e1e1e1;
+    }
+
+    section.ticket-page aside {
+        flex: 0 1 350px;
+        position: relative;
+        overflow: hidden;
+    }
+
+    section.ticket-page aside section {
+        width: calc(100% - 50px);
+        height: 20vh;
+        padding: 25px;
+        background-color: #e1e1e1;
+        margin-bottom: 25px;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    section.ticket-page aside section a img {
+        max-width: 100%;
+        max-height: 20vh;
+        border-radius: 10px;
+    }
+
+    @media (max-width: 1179px) {
+        section.ticket-page section.table-container {
+            margin-right: 0px;
+            margin-bottom: 40px;
+            flex: 0 1 100%;
+        }
+
+        section.ticket-page aside {
+            flex: 0 1 100%;
+            display: flex;
+            justify-content: space-between;
+        }
+
+        section.ticket-page aside .product {
+            margin-bottom: 0px;
+            width: calc(50% - 60px);
+        }
+
+        section.ticket-page aside .product-one {
+            display: none;
+        }
+    }
+
+    @media (max-width: 480px) {
+        section.ticket-page article {
+            display: none;
+        }
+
+        section.ticket-page aside {
+            flex-direction: column;
+        }
+
+        section.ticket-page aside .product {
+            margin-bottom: 25px;
+            width: calc(100% - 50px);
+        }
+
+        section.ticket-page aside .product-one {
+            display: flex;
+        }
+    }
+
 /* Default properties for the footer. */
 
     body > footer {
