--- a/assets/style.css
+++ b/assets/style.css
@@ -783,6 +783,140 @@
         }
     }
 
+/* Contact page */
+
+    section.contact-page {
+        width: 90%;
+        padding: 50px 5%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
+    section.contact-page article {
+        flex: 0 1 100%;
+        margin-bottom: 40px;
+        padding: 35px;
+        background-color: #e1e1e1;
+        border-radius: 10px;
+    }
+
+    section.contact-page article h3 {
+        font-size: 30px;
+        margin-bottom: 10px;
+    }
+
+    section.contact-page form {
+        flex: 0 1 calc(95% - 350px);
+        margin-right: 5%;
+        border-radius: 10px;
+    }
+
+    section.contact-page form fieldset {
+        padding: 15px 25px 25px 25px;
+        display: flex;
+        flex-direction: column;
+        background-color: #e1e1e1;
+        border-radius: 10px;
+        border: none;
+    }
+
+    section.contact-page form legend {
+        font-size: 20px;
+        padding: 10px 20px;
+        background-color: #e1e1e1;
+        border-radius: 5px;
+        height: 24px;
+    }
+
+    section.contact-page form label {
+        margin-top: 15px;
+        margin-bottom: 5px;
+    }
+
+    section.contact-page form label:nth-child(2) {
+        margin-top: 0px;
+    }
+
+    section.contact-page form input,
+    section.contact-page form textarea {
+        padding: 12px 20px;
+        border: none;
+        outline: none;
+        border-radius: 5px;
+    }
+
+    section.contact-page form button {
+        margin-top: 25px;
+        width: 100px;
+        padding: 12px 20px;
+        background-color: black;
+        border: none;
+        outline: none;
+        color: white;
+        border-radius: 5px;
+        font-size: 16px;
+    }
+
+    section.contact-page aside {
+        flex: 0 1 350px;
+        position: relative;
+        overflow: hidden;
+        padding-top: 22px;
+    }
+
+    section.contact-page aside section {
+        width: calc(100% - 50px);
+        height: 20vh;
+        padding: 25px;
+        background-color: #e1e1e1;
+        margin-bottom: 25px;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    section.contact-page aside section a img {
+        max-width: 100%;
+        max-height: 20vh;
+        border-radius: 10px;
+    }
+
+    @media (max-width: 1179px) {
+        section.contact-page form {
+            flex: 0 1 calc(95% - 200px);
+        } 
+
+        section.contact-page aside {
+            flex: 0 1 200px;
+        }
+
+        section.contact-page aside section {
+            height: 12vh;
+        }
+
+        section.contact-page aside section a img {
+            max-height: 12vh;
+        }
+    }
+
+    @media (max-width: 480px) {
+        section.contact-page aside,
+        section.contact-page form {
+            flex: 0 1 100%;
+            margin-right: 0px;
+        }
+
+        section.contact-page aside section {
+            height: 20vh;
+        }
+
+        section.contact-page aside section a img {
+            max-height: 20vh;
+        }
+    }
+
 /* Default properties for the footer. */
 
     body > footer {
